samples/_failures_safe/1761043130_d3b011_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5160df17.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_5160df17.c:179:9: error: expected declaration or statement at end of input
  179 |         case TOKEN_OPERATOR: return "OPERATOR";
      |         ^~~~
./samples/SAFE/__tmp_5160df17.c:179:9: error: expected declaration or statement at end of input
